# susurrus-flutter

./: .gitignore  CHANGELOG.md  Deployment.md  HISTORY.md  LEARNINGS.md  PLAN.md  README.md  Safe_Flutter_Setup.md  analysis_options.yaml  build_all.sh  build_and_run.sh  build_android.sh  build_ios.sh  build_windows.bat  dart_test.yaml  implementation_guide.md  l10n.yaml  project_status.md  pubspec.yaml
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts
android/app/: CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: whisper_jni.cpp
android/app/src/main/kotlin/com/crispstrobe/crisperweaver/: AudioProcessingPlugin.kt  MainActivity.kt  SystemAudioCaptureForegroundService.kt  WhisperCppPlugin.kt
android/app/src/main/kotlin/com/susurrus/flutter/: AudioProcessingPlugin.kt  MainActivity.kt  WhisperCppPlugin.kt
docs/: crispasr-dart-gaps.md  ios-share-extension-setup.md  upstream-chat-abi.md
ios/: Podfile  Podfile.txt  whisper_ios.cpp
ios/Frameworks/: .gitignore
ios/Runner/: AppDelegate.swift  AudioProcessingPlugin.swift  AudioProcessor.swift  CoreMLWhisperPlugin.swift  Info.plist  PrivacyInfo.xcprivacy  Runner-Bridging-Header.h  Runner.entitlements  Tokenizer.swift  WhisperCppPlugin.swift  whisper_ios_wrapper.cpp  whisper_ios_wrapper.h
ios/Runner.xcodeproj/: project.pbxproj
ios/ShareExtension/: Info.plist  RSIShareViewController.swift  ShareExtension.entitlements  ShareViewController.swift
lib/: main.dart
lib/constants/: app_constants.dart
lib/engines/: coreml_engine.dart  crispasr_engine.dart  engine_factory.dart  mock_engine.dart  transcription_engine.dart  whiper_cpp_engine.dart  whisper_cpp_engine.dart
lib/l10n/: app_de.arb  app_en.arb
lib/native/: coreml_whisper.dart  whisper_bindings.dart
lib/screens/: about_screen.dart  cloud_llm_settings_screen.dart  edit_audio_screen.dart  history_screen.dart  hotkey_settings_screen.dart  local_llm_settings_screen.dart  logs_screen.dart  model_management_screen.dart  settings_screen.dart  speaker_management_screen.dart  storage_screen.dart  synthesize_screen.dart  transcription_screen.dart  translate_screen.dart  voice_bake_screen.dart  voice_clone_wizard_screen.dart
lib/services/: aligner_service.dart  audio_edit_service.dart  audio_prefetch_service.dart  audio_service.dart  baked_models_catalog.dart  batch_persistence_service.dart  batch_queue_service.dart  cloud_llm_cleanup_service.dart  desktop_open_with_bridge.dart  diarization_service.dart  env_helpers.dart  history_service.dart  hotkey_service.dart  ios_helpers.dart  lid_service.dart  local_llm_backend.dart  local_llm_cleanup_service.dart  local_llm_worker.dart  log_service.dart  memory_estimator.dart  model_service.dart  native_licenses.dart  preset_service.dart  punc_service.dart  server_service.dart  settings_service.dart  share_intake_service.dart  speaker_id_service.dart  system_audio_capture_service.dart  text_translation_service.dart  transcript_cleanup_service.dart  transcript_summarize_service.dart  transcription_service.dart  transcription_worker.dart  transcription_worker_pool.dart  tts_service.dart  vad_service.dart  voice_baking_service.dart
lib/theme/: app_theme.dart
lib/utils/: audio_utils.dart  file_utils.dart  responsive.dart  transcript_parsers.dart
lib/widgets/: advanced_options_widget.dart  audio_recorder_widget.dart  batch_queue_card.dart  cloud_llm_settings_form.dart  diarization_settings_widget.dart  download_manager_widget.dart  hotkey_settings_form.dart  local_llm_settings_form.dart  transcription_output_widget.dart  waveform_painter.dart
linux/: CMakeLists.txt  com.crispstrobe.crisperweaver.desktop  whisper_linux.cpp
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/: whisper_macos.cpp
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  OpenWithReceiver.swift  Release.entitlements  SystemAudioCapture.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: bake_models_catalog.dart  build_ios_xcframework.sh  build_linux.sh  build_macos.sh  build_windows.ps1  bundle_linux_libs.sh  bundle_macos_dylibs.sh  bundle_windows_dlls.ps1  check.sh  wire_ios_share_extension.rb  wire_ios_xcframework.rb
test/: advanced_options_test.dart  app_state_test.dart  arb_consistency_test.dart  audio_edit_service_test.dart  audio_enhancement_live_test.dart  audio_prefetch_service_test.dart  backend_dispatch_test.dart  batch_grouping_test.dart  batch_persistence_service_test.dart  batch_queue_service_test.dart  batch_resume_offset_test.dart  chat_llm_catalogue_test.dart  chunked_offset_test.dart  cloud_llm_cleanup_live_test.dart  cloud_llm_cleanup_service_test.dart  cloud_llm_settings_form_test.dart  crispasr_live_test.dart  crispasr_parity_catalog_test.dart  desktop_open_with_bridge_test.dart  history_entry_test.dart  history_service_test.dart  hotkey_service_test.dart  hotkey_settings_form_test.dart  lid_service_test.dart  local_llm_cleanup_service_test.dart  memory_estimator_test.dart  pool_eligibility_test.dart  preset_service_test.dart  settings_service_test.dart  speaker_id_live_test.dart  storage_breakdown_test.dart  storage_format_test.dart  subtitle_export_test.dart  system_audio_capture_service_test.dart  text_translation_service_test.dart  transcribe_window_test.dart  transcript_cleanup_service_test.dart  transcript_parsers_test.dart  transcript_summarize_live_test.dart  transcript_summarize_service_test.dart  (+4 more)
windows/: CMakeLists.txt  whisper_windows.cpp
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
